--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
     <div class="slider-for">
         <div >
             <div class="slider-box" style="background-image: url(img/homeB.png);">
-                <div class="info-block">
+                <div class="info-block nn">
                     <div class="info-width">
                     <p class="titl-p">Помещение заведения “Сахара”</p>
                  <div class="left-img"><img class="left-img" src="img/line-b.png" alt="line"></div>
