--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>MyShef</title>
+    <title>Недвижимость - Продажа коммерческой недвижимости в Запорожье без посредников у владельца, собственника</title>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -349,10 +349,10 @@
             </div>
             <span>Связаться с владельцем</span>
             <h4>Введите свое имя и контактный номер телефона и мы
-                свяжемся с Вами в течении нескольких минут!</h4>
+                свяжемся с Вами в близжайшее время!</h4>
             <form >
                 <input name="name" type="text" placeholder="Ваше имя" >
-                <input name="phone" type="text" placeholder="+38 000 00 00" >
+                <input name="phone" type="text" placeholder="+380 000 00 00" >
                 <button type="submit">Жду звонка </button>
             </form>
         </div>
