--- a/app/english.html
+++ b/app/english.html
@@ -44,11 +44,11 @@
                             <img src="img/phone.png" alt="image">
                             <img src="img/phone1.png" alt="image">
                         </div>
-                        <a href="/english.html" class="language">
-                          en
+                        <a href="/index.html" class="language">
+                            ru
                         </a>
                     </div>
-                    <a href="/english.html"><img src="img/icons/earht.png" alt="image">English</a>
+                    <a href="/index.html"><img src="img/icons/earht.png" alt="image">Русский</a>
 
                 </div>
             </div>
@@ -70,7 +70,7 @@
                 <span> получая скидки и торг</span>
             </div>
 
-    </div>
+        </div>
     </div>
 
 </section>
@@ -80,54 +80,54 @@
             <div class="slider-box" style="background-image: url(img/khata/slide-Top.png);">
                 <div class="info-block nn">
                     <div class="info-width">
-                    <p class="titl-p">Помещение заведения “Сахара”</p>
-                 <div class="left-img"><img class="left-img" src="img/line-b.png" alt="line"></div>
+                        <p class="titl-p">Помещение заведения “Сахара”</p>
+                        <div class="left-img"><img class="left-img" src="img/line-b.png" alt="line"></div>
 
-                    <p class="normal-p">
-                        Продается отдельно стоящий комплекс строений, состоящий из
-                        гостиницы, ночного клуба, спортзалов, СПА, бильярда и ресторана.
-                        Помещения готовы под любой вид бизнеса: обучающие, медицинские,
-                        детские центры, спорт, магазины, общепит, склад, производство
-                        и прочее.
-                    </p>
-                    <div class="blue-box">
-                        <div>
-                        <p>Общая площадь: </p>
-                            <p>1 га земли</p>
-                            <p >Под застройкой:</p>
-                            <p> 0,6 га земли </p>
-                        </div>
-                        <div>
-                            <p> Адрес:</p>
-                            <p>  г. Запорожье,
-                                м-рн Пески,
-                                ул. 40-летия Победы, 31</p>
-                        </div>
-                        <div>
-                            <p>Цена:</p>
-                            <p> Цена: $ 1 500 000</p>
-                        </div>
+                        <p class="normal-p">
+                            Продается отдельно стоящий комплекс строений, состоящий из
+                            гостиницы, ночного клуба, спортзалов, СПА, бильярда и ресторана.
+                            Помещения готовы под любой вид бизнеса: обучающие, медицинские,
+                            детские центры, спорт, магазины, общепит, склад, производство
+                            и прочее.
+                        </p>
+                        <div class="blue-box">
+                            <div>
+                                <p>Общая площадь: </p>
+                                <p>1 га земли</p>
+                                <p >Под застройкой:</p>
+                                <p> 0,6 га земли </p>
+                            </div>
+                            <div>
+                                <p> Адрес:</p>
+                                <p>  г. Запорожье,
+                                    м-рн Пески,
+                                    ул. 40-летия Победы, 31</p>
+                            </div>
+                            <div>
+                                <p>Цена:</p>
+                                <p> Цена: $ 1 500 000</p>
+                            </div>
 
-                    </div>
-                    <div class="buttom-box">
-                        <div class="button button-red" data-photo="sahara">Смотреть фотографии</div>
-                        <div class="button " data-form>Связаться с владельцем</div>
-                    </div>
-                    <div class="icon-box">
-                        <div>
-                            <img src="img/icons/2.png" alt="image">
-                            <p>От владельца</p>
                         </div>
-                        <div>
-                            <img src="img/icons/1.png" alt="image">
-                            <p>Торг уместен</p>
+                        <div class="buttom-box">
+                            <div class="button button-red" data-photo="sahara">Смотреть фотографии</div>
+                            <div class="button " data-form>Связаться с владельцем</div>
                         </div>
-                        <div>
-                            <img src="img/icons/4.png" alt="image">
-                            <p>Живой бизнес</p>
+                        <div class="icon-box">
+                            <div>
+                                <img src="img/icons/2.png" alt="image">
+                                <p>От владельца</p>
+                            </div>
+                            <div>
+                                <img src="img/icons/1.png" alt="image">
+                                <p>Торг уместен</p>
+                            </div>
+                            <div>
+                                <img src="img/icons/4.png" alt="image">
+                                <p>Живой бизнес</p>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
             </div>
         </div>
@@ -188,11 +188,11 @@
 </div>
 <div class="slider-down" style="background-image: url(img/pattern1.png);">
 
-        <div class="slider-nav">
-            <div >
-                <div class="slider-box" data-href="#top">
-                    <div class="text-box ">
-                        <div class="top newr" style="background-image: url(img/khata/tab.png);">
+    <div class="slider-nav">
+        <div >
+            <div class="slider-box" data-href="#top">
+                <div class="text-box ">
+                    <div class="top newr" style="background-image: url(img/khata/tab.png);">
                         <p>Продается Ресторанно-гостиничный
                             комплекс «Панська Хата » . Рентабельный
                             бизнес с большими перспективами
@@ -206,45 +206,45 @@
                             ул. Комарова, 25
 
                         </div>
-                        </div>
-                        <div class="blue-down">
-                            Ресторанно-гостиничный комплекс
-                            “Панська Хата”
-                        </div>
                     </div>
-
-
+                    <div class="blue-down">
+                        Ресторанно-гостиничный комплекс
+                        “Панська Хата”
+                    </div>
                 </div>
+
 
             </div>
 
-            <div >
-                <div class="slider-box" data-href="#top">
-                    <div class="text-box">
-                        <div class="top" style="background-image: url(img/sahara/tab.png);">
-                            <p>Продается отдельно стоящий комплекс
-                                строений, состоящий из гостиницы,
-                                ночного клуба, спортзалов, СПА,
-                                бильярда и ресторана. Помещения
-                                готовы под любой вид бизнеса.
-                                Общая площадь - 1 га земли
-                                Под застройкой - 0,6 га земли
-                            </p>
-                            <div class="blue-box">
-                                Адрес: г. Запорожье, м-рн Пески,
-                                ул. 40-летия Победы, 31
-                            </div>
-                        </div>
-                        <div class="blue-down">
-                            Помещение заведения “Сахара”
-                        </div>
-                    </div>
-
-
-                </div>
-
-            </div>
         </div>
+
+        <div >
+            <div class="slider-box" data-href="#top">
+                <div class="text-box">
+                    <div class="top" style="background-image: url(img/sahara/tab.png);">
+                        <p>Продается отдельно стоящий комплекс
+                            строений, состоящий из гостиницы,
+                            ночного клуба, спортзалов, СПА,
+                            бильярда и ресторана. Помещения
+                            готовы под любой вид бизнеса.
+                            Общая площадь - 1 га земли
+                            Под застройкой - 0,6 га земли
+                        </p>
+                        <div class="blue-box">
+                            Адрес: г. Запорожье, м-рн Пески,
+                            ул. 40-летия Победы, 31
+                        </div>
+                    </div>
+                    <div class="blue-down">
+                        Помещение заведения “Сахара”
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
+    </div>
 </div>
 <div class="slider-wrapper" >
     <div class="slider-for">
@@ -353,106 +353,106 @@
             </section>
         </div>
 
-</div>
+    </div>
 
-<div class="head">
-    <div class="container">
-        <div class="row">
-            <div class="head-info">
-                <div class="tel-win">
-                    <a href="tel:+380668208156">+38066-820-81-56</a>
-                </div>
-                <h2><a href="tel:+380668208156">Телефон: <span>+38066-820-81-56</span></a></h2>
-                <div class="button-lang">
-                    <div class="button" data-form>Связаться с владельцем</div>
-                    <div class="mail-new" data-form="">
-                        <img src="img/email.png" alt="image">
-                        <img src="img/email1.png" alt="image">
+    <div class="head">
+        <div class="container">
+            <div class="row">
+                <div class="head-info">
+                    <div class="tel-win">
+                        <a href="tel:+380668208156">+38066-820-81-56</a>
                     </div>
-                    <div class="buttons-mobile">
-                        <div class="phone">
-                            <img src="img/phone.png" alt="image">
-                            <img src="img/phone1.png" alt="image">
+                    <h2><a href="tel:+380668208156">Телефон: <span>+38066-820-81-56</span></a></h2>
+                    <div class="button-lang">
+                        <div class="button" data-form>Связаться с владельцем</div>
+                        <div class="mail-new" data-form="">
+                            <img src="img/email.png" alt="image">
+                            <img src="img/email1.png" alt="image">
                         </div>
-                        <a href="/english.html" class="language">
-                            en
-                        </a>
+                        <div class="buttons-mobile">
+                            <div class="phone">
+                                <img src="img/phone.png" alt="image">
+                                <img src="img/phone1.png" alt="image">
+                            </div>
+                            <a href="/index.html" class="language">
+                                ru
+                            </a>
+                        </div>
+                        <a href="/index.html"><img src="img/icons/earht.png" alt="image">Русский</a>
+
                     </div>
-                    <a href="/english.html"><img src="img/icons/earht.png" alt="image">English</a>
-
                 </div>
             </div>
         </div>
-    </div>
 
-</div>
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="foo">
-            <div class="left">© Copyright 2018</div>
-            <div class="right"><a href="https://bastard.studio/">Сайт разработан Bastard Studio</a></div>
-            </div>
-        </div>
     </div>
-
-</footer>
-<div class="thank-you thank-you-finish">
-    <div class="dark">
-    <div class="thank-you-window">
-        <div class="button-crest">
-            <img src="img/icon.png" alt="image">
-        </div>
-        <p>
-            Благодарим за обращение!
-            Мы скоро с Вами свяжемся.
-        </p>
-    </div>
-    </div>
-</div>
-<div class="thank-you thank-you-form">
-    <div class="dark">
-        <div class="thank-you-window">
-            <div class="button-crest">
-                <img src="img/icon.png" alt="image">
-            </div>
-            <span>Связаться с владельцем</span>
-            <h4>Введите свое имя и контактный номер телефона и мы
-                свяжемся с Вами в близжайшее время!</h4>
-            <form >
-                <input name="name" type="text" placeholder="Ваше имя" >
-                <input name="phone" type="text" placeholder="+380 000 00 00" >
-                <button type="submit">Жду звонка </button>
-            </form>
-        </div>
-    </div>
-</div>
-<div class="popup-images sahara" style="background-image: url(img/pattern1.png);" >
-    <div class="container">
-        <div class="row">
-            <div class="dsr">
-            <div class="slider-big" >
-                <div class="crest"><img src="img/crb.png" alt=""></div>
-                <div class="big">
-                    <div><div class="sli"><img src="img/sahara/sl1.png" alt="image"></div></div>
-                    <div><div class="sli"><img src="img/sahara/sl2.png" alt="image"></div></div>
-                    <div><div class="sli"><img src="img/sahara/sl3.png" alt="image"></div></div>
-                    <div><div class="sli"><img src="img/sahara/sl4.png" alt="image"></div></div>
-                    <div><div class="sli"><img src="img/sahara/sl5.png" alt="image"></div></div>
-                </div>
-                </div>
-            <div class="slider-small" >
-
-                <div class="small">
-                    <div><div class="sli"><img src="img/sahara/sl1.png" alt="image"></div></div>
-                    <div><div class="sli"><img src="img/sahara/sl2.png" alt="image"></div></div>
-                    <div><div class="sli"><img src="img/sahara/sl3.png" alt="image"></div></div>
-                    <div><div class="sli"><img src="img/sahara/sl4.png" alt="image"></div></div>
-                    <div><div class="sli"><img src="img/sahara/sl5.png" alt="image"></div></div>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="foo">
+                    <div class="left">© Copyright 2018</div>
+                    <div class="right"><a href="https://bastard.studio/">Сайт разработан Bastard Studio</a></div>
                 </div>
             </div>
+        </div>
+
+    </footer>
+    <div class="thank-you thank-you-finish">
+        <div class="dark">
+            <div class="thank-you-window">
+                <div class="button-crest">
+                    <img src="img/icon.png" alt="image">
+                </div>
+                <p>
+                    Благодарим за обращение!
+                    Мы скоро с Вами свяжемся.
+                </p>
             </div>
         </div>
+    </div>
+    <div class="thank-you thank-you-form">
+        <div class="dark">
+            <div class="thank-you-window">
+                <div class="button-crest">
+                    <img src="img/icon.png" alt="image">
+                </div>
+                <span>Связаться с владельцем</span>
+                <h4>Введите свое имя и контактный номер телефона и мы
+                    свяжемся с Вами в близжайшее время!</h4>
+                <form >
+                    <input name="name" type="text" placeholder="Ваше имя" >
+                    <input name="phone" type="text" placeholder="+380 000 00 00" >
+                    <button type="submit">Жду звонка </button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="popup-images sahara" style="background-image: url(img/pattern1.png);" >
+        <div class="container">
+            <div class="row">
+                <div class="dsr">
+                    <div class="slider-big" >
+                        <div class="crest"><img src="img/crb.png" alt=""></div>
+                        <div class="big">
+                            <div><div class="sli"><img src="img/sahara/sl1.png" alt="image"></div></div>
+                            <div><div class="sli"><img src="img/sahara/sl2.png" alt="image"></div></div>
+                            <div><div class="sli"><img src="img/sahara/sl3.png" alt="image"></div></div>
+                            <div><div class="sli"><img src="img/sahara/sl4.png" alt="image"></div></div>
+                            <div><div class="sli"><img src="img/sahara/sl5.png" alt="image"></div></div>
+                        </div>
+                    </div>
+                    <div class="slider-small" >
+
+                        <div class="small">
+                            <div><div class="sli"><img src="img/sahara/sl1.png" alt="image"></div></div>
+                            <div><div class="sli"><img src="img/sahara/sl2.png" alt="image"></div></div>
+                            <div><div class="sli"><img src="img/sahara/sl3.png" alt="image"></div></div>
+                            <div><div class="sli"><img src="img/sahara/sl4.png" alt="image"></div></div>
+                            <div><div class="sli"><img src="img/sahara/sl5.png" alt="image"></div></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
