--- a/app/english.html
+++ b/app/english.html
@@ -64,7 +64,7 @@
 
             </h1>
             <div class="change-text">
-                <p class="height-string" style="opacity: 0">напрямую с владельцем </p>
+                <p class="height-string" style="opacity: 0; height: 40px;">напрямую с владельцем </p>
                 <span class="active">без посредников</span>
                 <span>без посредников</span>
                 <span> от собственника</span>
