--- a/app/index.html
+++ b/app/index.html
@@ -59,15 +59,17 @@
 <section class="blue"  id="top" style="background-image: url(img/pattern.png);">
     <div class="container">
         <div class="row">
-            <h1 class="intro">Продажа коммерческой недвижимости
+            <div class="change-block">
+                <h1 class="intro">Продажа коммерческой недвижимости
 
-            </h1>
-            <div class="change-text">
-                <p class="height-string" style="opacity: 0">напрямую с владельцем </p>
-                <span class="active">напрямую с владельцем</span>
-                <span>никаких комиссий</span>
-                <span> без посредников</span>
-                <span> получая скидки и торг</span>
+                </h1>
+                <div class="change-text">
+                    <p class="height-string" style="opacity: 0; height: 40px;">напрямую с владельцем </p>
+                    <span class="active">без посредников</span>
+                    <span>без посредников</span>
+                    <span> от собственника</span>
+                    <span> без % комиссий</span>
+                </div>
             </div>
 
     </div>
